# aoc

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/aoc/: build_dataset.ipynb  build_dataset.py  check_items.ipynb  crop_coins.py  fft_upper.ipynb  gradient_orientation.ipynb  hog.ipynb  hough_circles.ipynb  pca.ipynb  playground.ipynb  rorations.ipynb  umap.ipynb  utils.py  verification.py
