[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "aoc"
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["_version.txt"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }
